Initial idea about class diagram

--- a/trunk/ontomap/ontomap.project
+++ b/trunk/ontomap/ontomap.project
@@ -6,11 +6,17 @@ Fasi:
 3. Traduzione da elemento sorgente a elemento destinazione SENZA TRADUZIONI DI FORMATO
 4. Conversioni di formato
 
+Strumenti:
+librdf (Redland) per il supporto alle triple ("tirare su" i dati)
+python / pygtk come linguaggio e libreria x eventuale applicazione grafica
+FaCT++ con supporto DIG per reasoning
+
 * Generazione del mapping semantico
 Il da farsi consiste nel modificare l'ontologia cui fa riferimento il progetto Artemis (OWLmt). I concetti di mappaggio vanno bene, devono però essere integrati nei metodi di mapping GIA' previsti in OWL. Potrebbe essere sufficiente far derivare per ereditarietà i loro concetti di mapping con quelli OWL
 
 * Associazione tra elementi di un xml schema e concetti dell'ontologia
 Serve un secondo mapping manuale dagli elementi dello schema all'ontologia, come passo da "elem_CK2" al concetto "Matrimonio"?
+Nel caso HL7 ho già a disposizione la serie di trasformazioni da MIF a XSD. Posso modificare quello per generare un mapping
 
 * Traduzione da elemento sorgente a elemento destinazione SENZA TRADUZIONI DI FORMATO
 Servono tre parametri: messaggio di origine, ontologia di partenza e struttura di messaggio di destinazione
@@ -22,4 +28,4 @@ La traduzione può essere eseguita in questo modo:
 	costruisco l'istanza di destinazione
 
 * Conversioni di formato
-Visto che il mappaggio alla fine è tra schema e schema (l'ontologia serve come "ponte") sarebbe interessante specificare o un'architettura per la conversione dati tra uno schema e l'altro oppure specificare nei file di mappaggio come deve essere eseguita la conversione
+Visto che il mappaggio alla fine è tra schema e schema (l'ontologia serve come "ponte") sarebbe interessante specificare oNel caso HL7 ho già a disposizione la serie di trasformazioni da MIF a XSD. Posso modificare quello per generare un mapping un'architettura per la conversione dati tra uno schema e l'altro oppure specificare nei file di mappaggio come deve essere eseguita la conversione
