HL7: added first (non functional) prototypes for HMD and CMET ontology generation. Re-started working on Datatypes, need to be ported to OWL DL

--- a/trunk/conversion/rim2owl/Makefile
+++ b/trunk/conversion/rim2owl/Makefile
@@ -1,11 +1,15 @@
 SAXON=~/bin/saxon2
 ACCOUNT=carenini@shell.berlios.de
 REMOTE_DIR=/home/groups/veggente/htdocs/ns
+INPUT_MIF=../input/MIF
 main: xsl
-xsl:
-	$(SAXON) -sall ../input/MIF/rim.coremif rim2owl.xsl > rim.owl
+xsl: rim datatype cmet
+rim:
+	$(SAXON) -sall $(INPUT_MIF)/rim.coremif rim2owl.xsl > rim.owl
+datatype:
 	$(SAXON) rim_datatypes.owl clean_dt.xsl > rim_datatypes_fix.owl
-	$(SAXON) -sall ../input/cmetinfo.coremif clean_dt.xsl > rim_cmet.owl
+cmet:
+	$(SAXON) -sall $(INPUT_MIF)/COCT*.mif cmet2owl.xsl > rim_cmet.owl
 install:
 	scp rim.owl $(ACCOUNT):$(REMOTE_DIR)/RIMOntology
 	scp rim_datatypes_fix.owl $(ACCOUNT):$(REMOTE_DIR)/RIMDatatype
