--- a/trunk/conversion/rim2owl/Makefile
+++ b/trunk/conversion/rim2owl/Makefile
@@ -10,7 +10,10 @@ datatype:
 	$(SAXON) rim_datatypes.owl clean_dt.xsl > rim_datatypes_fix.owl
 cmet:
 	$(SAXON) -sall $(INPUT_MIF)/COCT*.mif cmet2owl.xsl > rim_cmet.owl
-install:
-	scp rim.owl $(ACCOUNT):$(REMOTE_DIR)/RIMOntology
-	scp rim_datatypes_fix.owl $(ACCOUNT):$(REMOTE_DIR)/RIMDatatype
+install: rim_inst dt_inst cmet_inst
+cmet_inst:
 	scp rim_cmet.owl $(ACCOUNT):$(REMOTE_DIR)/RIM_CMET
+rim_inst:
+	scp rim.owl $(ACCOUNT):$(REMOTE_DIR)/RIMOntology
+dt_inst:
+	scp rim_datatypes_fix.owl $(ACCOUNT):$(REMOTE_DIR)/RIMDatatype
