--- a/trunk/conversion/rim2owl/Makefile
+++ b/trunk/conversion/rim2owl/Makefile
@@ -2,18 +2,24 @@ SAXON=~/bin/saxon2
 ACCOUNT=carenini@shell.berlios.de
 REMOTE_DIR=/home/groups/veggente/htdocs/ns
 INPUT_MIF=../input/MIF
+OUTPUT_DIR=../output
 main: xsl
-xsl: rim datatype cmet
+xsl: rim datatype cmet_container
 rim:
-	$(SAXON) -sall $(INPUT_MIF)/rim.coremif rim2owl.xsl > rim.owl
+	$(SAXON) -sall $(INPUT_MIF)/rim.coremif rim2owl.xsl > $(OUTPUT_DIR)/rim.owl
 datatype:
-	$(SAXON) rim_datatypes.owl clean_dt.xsl > rim_datatypes_fix.owl
+	$(SAXON) rim_datatypes.owl clean_dt.xsl > $(OUTPUT_DIR)/rim_datatypes_fix.owl
+cmet_container:
+	$(SAXON) -sall $(INPUT_MIF)/cmetinfo.coremif cmet_container.xsl > $(OUTPUT_DIR)/rim_cmet.owl
 cmet:
-	$(SAXON) -sall $(INPUT_MIF)/COCT*.mif cmet2owl.xsl > rim_cmet.owl
+	for i in `/bin/ls $(INPUT_MIF)/*.mif`; do \
+		touch  $(OUTPUT_DIR)/cmet/`basename $$i .mif`;\
+		$(SAXON) -sall $$i cmet2owl.xsl > $(OUTPUT_DIR)/cmet/`basename $$i .mif`;\
+	done;
 install: rim_inst dt_inst cmet_inst
 cmet_inst:
-	scp rim_cmet.owl $(ACCOUNT):$(REMOTE_DIR)/RIM_CMET
+	scp $(OUTPUT_DIR)/rim_cmet.owl $(ACCOUNT):$(REMOTE_DIR)/RIM_CMET
 rim_inst:
-	scp rim.owl $(ACCOUNT):$(REMOTE_DIR)/RIMOntology
+	scp $(OUTPUT_DIR)/rim.owl $(ACCOUNT):$(REMOTE_DIR)/RIMOntology
 dt_inst:
-	scp rim_datatypes_fix.owl $(ACCOUNT):$(REMOTE_DIR)/RIMDatatype
+	scp $(OUTPUT_DIR)/rim_datatypes_fix.owl $(ACCOUNT):$(REMOTE_DIR)/RIMDatatype
