Mapper: skeleton for Mapping Engine 	Some work on OWL object Elevator: skeleton for RDF Grounding Engine WWW: some www updates

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -5,7 +5,7 @@ svn_commit:
 	svn commit
 rss: 
 	svn --xml log svn+ssh://carenini@svn.berlios.de/svnroot/repos/veggente/trunk > svn_log.xml
-	xsltproc $(WWW_DIR)/svnlog.xslt svn_log.xml > devel.rss
+	xsltproc $(WWW_DIR)/svnlog.xslt svn_log.xml > $(WWW_DIR)/devel.rss
 copy_rss:
 	scp $(WWW_DIR)/devel.rss $(REMOTE):www/
 	scp $(WWW_DIR)/news.rss $(REMOTE):www/
@@ -13,5 +13,6 @@ www_update:
 	scp $(WWW_DIR)/css/style.css $(REMOTE):www/css/
 	scp $(WWW_DIR)/devel.rss $(REMOTE):www/
 	scp $(WWW_DIR)/news.rss $(REMOTE):www/
-	scp $(WWW_DIR)/index.html $(REMOTE):www/
+	scp $(WWW_DIR)/foaf.rdf $(REMOTE):www/
+	scp $(WWW_DIR)/*.html $(REMOTE):www/
 	scp $(WWW_DIR)/img/* $(REMOTE):www/img/
