--- a/trunk/mapper/configure.in
+++ b/trunk/mapper/configure.in
@@ -5,7 +5,7 @@ dnl Every other copy of the package version number gets its value from here
 AM_INIT_AUTOMAKE(mapper, 0.0.1)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER(src/config.h)
 
 AC_SUBST(VERSION)
 
@@ -23,8 +23,13 @@ dnl Checks for libraries.
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )
+AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h redland.h)
 
+
+CPPFLAGS="-DVERBOSE"
+CFLAGS="-Wall -pedantic -g -ansi"
+LIBS="$LIBS -lrdf -lcurl -ldl -lz -lidn"
+LDFLAGS="$LDFLAGS -L/usr/lib -L/usr/local/lib"
 
 jm_CHECK_TYPE_STRUCT_UTIMBUF
 AC_HEADER_MAJOR
@@ -32,7 +37,7 @@ AC_FUNC_ALLOCA
 AC_STRUCT_TM
 AC_STRUCT_ST_BLOCKS
 AC_FUNC_CLOSEDIR_VOID
-AC_CHECK_FUNCS(mkfifo)
+AC_CHECK_FUNCS(mkfifo snprintf)
 AC_CHECK_FUNC(mknod)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
