--- a/trunk/mapper/src/Makefile.am
+++ b/trunk/mapper/src/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS=mapper
-mapper_SOURCES= mapper.c system.h ../aclocal.m4 getopt.c getopt1.c getopt.h
-mapper_LDADD=@LIBS@
+mapper_SOURCES= mapper.c owl_storage.c generic_list.c system.h ../aclocal.m4 getopt.c getopt1.c getopt.h
+#mapper_LDADD=@LIBS@
