Engine: nearly completed joining base engine and application context functions 	Request.c wraps request creation and processing 	Context.c wraps configuration data 	Refined generic_list introducing a function pointer to handle data comparison

--- a/trunk/mapper/src/Makefile.am
+++ b/trunk/mapper/src/Makefile.am
@@ -1,3 +1,5 @@
-bin_PROGRAMS=mapper
+bin_PROGRAMS=mapper thread_test
 mapper_SOURCES= mapper.c owl_storage.c generic_list.c system.h ../aclocal.m4
+thread_test_SOURCES= thread_test.c engine.c generic_list.c system.h ../aclocal.m4
 #mapper_LDADD=@LIBS@
+thread_test_LDFLAGS=-lpthread
