--- a/trunk/mapper/configure.in
+++ b/trunk/mapper/configure.in
@@ -27,7 +27,7 @@ AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacro
 
 
 CPPFLAGS="-DVERBOSE"
-CFLAGS="-Wall -pedantic -g -ansi"
+CFLAGS="-Wall -pedantic -ansi -g"
 LIBS="$LIBS -lrdf -lcurl -ldl -lz -lidn"
 LDFLAGS="$LDFLAGS -L/usr/lib -L/usr/local/lib"
 
