Mapper: started soap client Fixed bugs in generic_list, engine, context More work on engine

--- a/trunk/mapper/configure.in
+++ b/trunk/mapper/configure.in
@@ -28,7 +28,7 @@ AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacro
 
 CPPFLAGS="-DVERBOSE"
 CFLAGS="-Wall -pedantic -ansi -g"
-LIBS="$LIBS -lrdf -lcurl -ldl -lz -lidn"
+LIBS="$LIBS "
 LDFLAGS="$LDFLAGS -L/usr/lib -L/usr/local/lib"
 
 jm_CHECK_TYPE_STRUCT_UTIMBUF
