--- a/trunk/mapper/Makefile
+++ b/trunk/mapper/Makefile
@@ -90,14 +90,14 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run aclocal-1.9
 ALLOCA = 
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run tar
-AUTOCONF = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run autoconf
-AUTOHEADER = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run autoheader
-AUTOMAKE = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run automake-1.9
+AMTAR = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run tar
+AUTOCONF = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -119,12 +119,12 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
-ISODATE = 2006-02-23
+ISODATE = 2006-02-24
 LDFLAGS =  -L/usr/lib -L/usr/local/lib
 LIBOBJS = 
-LIBS =  -lrdf -lcurl -ldl -lz -lidn
+LIBS =  
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/io/progetti/veggente/trunk/mapper/missing --run makeinfo
 OBJEXT = o
 PACKAGE = mapper
 PACKAGE_BUGREPORT = 
@@ -164,7 +164,7 @@ host_os = linux-gnu
 host_vendor = pc
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /mnt/disk/home/io/doc/progetti/veggente/trunk/mapper/install-sh
+install_sh = /home/io/progetti/veggente/trunk/mapper/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
