Mapper: added options from command line for server Added/fixed request thread cleanup function

--- a/trunk/mapper/src/Makefile.am
+++ b/trunk/mapper/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS=mapper mapper_client
+bin_PROGRAMS=mapper_server mapper_client
 
 # gSOAP code generation
 SOAP=soapcpp2
@@ -19,9 +19,9 @@ CLEANFILES=$(SOAP_C_SRC) soapStub.h soapH.h soapClientLib.c soapServerLib.c *.re
 # end of gSOAP stuff
 
 #mapper_SOURCES= mapper.c owl_storage.c generic_list.c system.h ../aclocal.m4
-mapper_SOURCES= thread_test.c engine.c generic_list.c owl_storage.c context.c request.c $(SOAP_C_SERVER) system.h ../aclocal.m4
+mapper_server_SOURCES= mapper_server.c engine.c generic_list.c owl_storage.c context.c request.c $(SOAP_C_SERVER) system.h ../aclocal.m4
 #mapper_LDADD=@LIBS@
-mapper_LDFLAGS=-lpthread -lstdsoap2 -lrdf -lcurl -ldl -lz -lidn
+mapper_server_LDFLAGS=-lpthread -lstdsoap2 -lrdf -lcurl -ldl -lz -lidn
 
 mapper_client_SOURCES= soap_client.c generic_list.c $(SOAP_C_CLIENT) system.h ../aclocal.m4
 mapper_client_LDFLAGS=-lstdsoap2
