Conversion: initial work on w3c CWM support

--- a/trunk/conversion/rim2owl/Makefile
+++ b/trunk/conversion/rim2owl/Makefile
@@ -1,9 +1,13 @@
 SAXON=~/bin/saxon2
 ACCOUNT=carenini@shell.berlios.de
+VEGGENTE=http://veggente.berlios.de/ns
 REMOTE_DIR=/home/groups/veggente/htdocs/ns
 INPUT_MIF=../input/MIF
 OUTPUT_DIR=../output
 CMET_INFO_DIR=$(PWD)/../input/MIF
+EXPLODE_DIR=../output/explode
+CWM_RULES=../cwm-rules
+
 main: xsl
 xsl: rim datatype cmet_container
 rim:
@@ -12,7 +16,6 @@ datatype:
 	$(SAXON) rim_datatypes.owl clean_dt.xsl > $(OUTPUT_DIR)/rim_datatypes_fix.owl
 cmet_container:
 	$(SAXON) -sall $(INPUT_MIF)/cmetinfo.coremif cmet_container.xsl > $(OUTPUT_DIR)/rim_cmet.owl
-# Until further investigation processed CMET are only those with filename *_MT*
 cmet:
 	for i in `/bin/ls -1 $(INPUT_MIF)/*_*.mif`; do \
 		touch  $(OUTPUT_DIR)/cmet/`basename $$i .mif`;\
@@ -34,5 +37,37 @@ debug:
 	for i in `/bin/ls -1 $(OUTPUT_DIR)/cmet`; do \
 		$(SAXON) -sall $(OUTPUT_DIR)/cmet/$$i debug.xsl > $(OUTPUT_DIR)/debug/$$i.out;\
 	done;
+deps: main_deps cmet_deps
+main_deps:
+	for i in $(OUTPUT_DIR)/*.owl; do \
+		$(SAXON) $(OUTPUT_DIR)/$$i doc_dep.xsl > $(OUTPUT_DIR)/`basename $(OUTPUT_DIR)/$$i .owl`-tmp.dep; \
+	done; \
+	for i in $(OUTPUT_DIR)/*-tmp.dep; do \
+		$(SAXON) $(OUTPUT_DIR)/$$i unique_dep_find.xsl > $(OUTPUT_DIR)/`basename $(OUTPUT_DIR)/$$i -tmp.dep`.dep; \
+	done; \
+	rm -f $(OUTPUT_DIR)/*-tmp.dep
+	mv $(OUTPUT_DIR)/*.dep $(OUTPUT_DIR)/deps/
+cmet_deps:
+	for i in $(OUTPUT_DIR)/cmet/*; do \
+		$(SAXON) $$i doc_dep.xsl > $$i-tmp.dep; \
+	done; \
+	for i in $(OUTPUT_DIR)/cmet/*-tmp.dep; do \
+		$(SAXON) $$i unique_dep_find.xsl > $(OUTPUT_DIR)/cmet/`basename $(OUTPUT_DIR)/cmet/$$i -tmp.dep`.dep; \
+	done; \
+	rm -f $(OUTPUT_DIR)/cmet/*-tmp.dep
+	mv $(OUTPUT_DIR)/*.dep $(OUTPUT_DIR)/deps/
+explode_deps: explode_main explode_cmet
+explode_main:
+	 cwm --rdf $(VEGGENTE)/RIMOntology `cat $(OUTPUT_DIR)/rim.dep` --n3 $(CWM_RULES)/owl.n3 --filter=$(CWM_RULES)/owl-lite.n3 --think --ugly --purge --rdf >$(EXPLODE_DIR)/rim.tmp && cwm --rdf $(VEGGENTE)/RIMOntology $(EXPLODE_DIR)/rim.tmp > $(EXPLODE_DIR)/RIMOntology
+	 cwm --rdf $(VEGGENTE)/RIMDatatype --n3 $(CWM_RULES)/owl.n3 --filter=$(CWM_RULES)/owl-lite.n3 --think --ugly --purge --rdf >$(EXPLODE_DIR)/rim_dt.tmp && cwm --rdf $(VEGGENTE)/RIMDatatype $(EXPLODE_DIR)/rim_dt.tmp > $(EXPLODE_DIR)/RIMDatatype
+	 rm -f $(EXPLODE_DIR)/*.tmp 
+explode_cmet:
+	for i in $(OUTPUT_DIR)/cmet/*; do \
+		 DOCNAME=`basename $$i`; \
+		 echo "Processing $$DOCNAME"; \
+	   	 cwm --rdf $(VEGGENTE)/cmet/$$DOCNAME `cat $(OUTPUT_DIR)/deps/$$DOCNAME.dep`  --n3 $(CWM_RULES)/owl.n3 --filter=$(CWM_RULES)/owl-lite.n3 --think --ugly --purge --rdf >$(EXPLODE_DIR)/$$DOCNAME.tmp && \
+	  	 cwm --rdf $(VEGGENTE)/cmet/$$DOCNAME $(EXPLODE_DIR)/$$DOCNAME.tmp `cat $(OUTPUT_DIR)/deps/$$DOCNAME.dep`> $(EXPLODE_DIR)/$$DOCNAME; \
+	done; \
+ 	rm -f $(EXPLODE_DIR)/*.tmp 
 svn_commit:
 	cd ../../; svn commit
